# rosrobotsimu

./: README.md  frames.gv
devel/: .catkin  .rosinstall  setup.sh
devel/lib/bumperbot_controller/: noisy_controller_node  simple_controller_node  simple_controller_node.py
devel/lib/bumperbot_examples/: simple_cpp_publisher  simple_cpp_service_client  simple_cpp_service_server  simple_cpp_subscriber  simple_cpp_timer  simple_timer.py  tf_examples_node  tf_examples_node.py  turtlesim_kinematics_node  turtlesim_kinematics_node.py
devel/lib/bumperbot_localization/: imu_republisher_node.py  kalman_filter_node
devel/lib/pkgconfig/: bumperbot_controller.pc  bumperbot_description.pc  bumperbot_examples.pc  bumperbot_localization.pc
devel/share/bumperbot_controller/cmake/: bumperbot_controllerConfig.cmake
devel/share/bumperbot_description/cmake/: bumperbot_descriptionConfig.cmake
src/bumperbot_controller/: package.xml
src/bumperbot_controller/config/: joystick.yaml
src/bumperbot_controller/launch/: amcl_vetri.launch  move_base.launch  navigation.launch  simu_robot.launch
src/bumperbot_controller/param/: global_costmap_params.yaml  local_costmap_params.yaml
src/bumperbot_description/config/: custom.rviz
src/bumperbot_description/launch/: gazebo.launch
src/bumperbot_description/maps/: my_map.yaml
src/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro
src/bumperbot_description/worlds/: custom_home.world  vetri.world
src/bumperbot_examples/: package.xml
src/bumperbot_localization/: package.xml
(+7 files in other folders)
